syntax = "proto3";

package dkg.dkgpb.v1;

option go_package = "github.com/obolnetwork/charon/dkg/dkgpb/v1";

// EIP712 signatures
message MsgConfigSig {
  bytes creator_config_sig = 1;
  bytes operator_config_sig = 2;
  bytes operator_enr_sig = 3;
  uint32 peer_index = 4;
}
